full copatibility with the JsonLogic test.json code cleanup using intelliJ analysis